--- a/gps-logger/MainPage.xaml
+++ b/gps-logger/MainPage.xaml
@@ -8,6 +8,8 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBox x:Name="txtGPS" HorizontalAlignment="Left" Height="118" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="340"/>
+        <Button Content="Get Position" HorizontalAlignment="Left" Margin="10,133,0,0" VerticalAlignment="Top" Height="73" Width="340" Click="Button_Click"/>
 
     </Grid>
 </Page>
