--- a/gps-logger/MainPage.xaml
+++ b/gps-logger/MainPage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Pivot Title="GPS Logger">
+    <Pivot SelectionChanged="Pivot_SelectionChanged">
         <PivotItem Header="Logging">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -22,7 +22,7 @@
                     <TextBlock Foreground="White" FontSize="25" Text="Lon:"/>
                     <TextBlock Foreground="White" FontSize="25" Text=""/>
                     <TextBlock Foreground="White" FontSize="25" Text="Time:"/>
-                    <TextBlock Foreground="White" FontSize="25" Text="Disance:"/>
+                    <TextBlock Foreground="White" FontSize="25" Text="Dist:"/>
                     <TextBlock Foreground="White" FontSize="25" Text="Start:"/>
                 </StackPanel>
 
@@ -40,9 +40,28 @@
                 </StackPanel>
             </Grid>
         </PivotItem>
-        <PivotItem Header="Journeys">
+        <PivotItem Header="Journeys" x:Name="tabJourneys">
             <Grid>
-                <ListView HorizontalAlignment="Left" Height="100" Margin="257,177,-21,0" VerticalAlignment="Top" Width="100"/>
+                <ListView HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="lvFiles">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                            <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="x:String">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="50"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Image Source="Assets/Square44x44Logo.scale-200.png" Margin="0,10,0,10" Width="44" Height="44" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                <TextBlock Text="{x:Bind}" Foreground="White" FontSize="25" Grid.Column="1" VerticalAlignment="Center"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Grid>
         </PivotItem>
     </Pivot>
