--- a/gps-logger/MainPage.xaml
+++ b/gps-logger/MainPage.xaml
@@ -42,22 +42,20 @@
         </PivotItem>
         <PivotItem Header="Journeys" x:Name="tabJourneys">
             <Grid>
-                <ListView HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="lvFiles">
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                            <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                        </Style>
-                    </ListView.ItemContainerStyle>
+                <ListView HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="lvFiles" ItemsSource="{x:Bind ViewModel.LogFiles}">
                     <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="x:String">
+                        <DataTemplate x:DataType="local:LogFile">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="50"/>
                                     <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
                                 <Image Source="Assets/Square44x44Logo.scale-200.png" Margin="0,10,0,10" Width="44" Height="44" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                                <TextBlock Text="{x:Bind}" Foreground="White" FontSize="25" Grid.Column="1" VerticalAlignment="Center"/>
+                                <StackPanel VerticalAlignment="Center" Grid.Column="1">
+                                    <TextBlock Text="{x:Bind label}" Foreground="White" FontSize="23"/>
+                                    <TextBlock Text="{x:Bind label}" Foreground="LightGray" FontSize="10"/>
+                                </StackPanel>
+                                
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
