--- a/gps-logger/MainPage.xaml
+++ b/gps-logger/MainPage.xaml
@@ -53,7 +53,7 @@
                                 <Image Source="Assets/Square44x44Logo.scale-200.png" Margin="0,10,0,10" Width="44" Height="44" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                 <StackPanel VerticalAlignment="Center" Grid.Column="1">
                                     <TextBlock Text="{x:Bind label}" Foreground="White" FontSize="23"/>
-                                    <TextBlock Text="{x:Bind label}" Foreground="LightGray" FontSize="10"/>
+                                    <TextBlock Text="{x:Bind dt}" Foreground="LightGray" FontSize="10"/>
                                 </StackPanel>
                                 
                             </Grid>
